增加 auth 模块
