# schema/auth.go
@@ -1,0 +1,10 @@
+package schema
+
+type Login struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type Register struct {
+	Login
+}
